# ev-fil-zk

./: .gitignore  Cargo.toml  README.md
src/: domain.rs  lib.rs  multicore.rs  multiexp.rs  settings.rs
src/gadgets/: multipack.rs  num.rs
src/gpu/: error.rs  fft.rs  mod.rs  multiexp.rs  nogpu.rs  scheduler.rs  structs.rs  utils.rs
src/gpu/fft/: fft.cl
src/groth16/: generator.rs  mapped_params.rs  mod.rs  params.rs  proof.rs  prover.rs  verifier.rs
src/groth16/prover/: prover_preload.rs
src/groth16/tests/: mod.rs
tests/: gpu_provers.rs  mimc.rs
