[package]
name = "bellperson"
authors = [
    "dignifiedquire <me@dignifiedquire.com>",
    "Sean Bowe <ewillbefull@gmail.com>",
    "Mikhail Komarov <nemo@nil.foundation>"
]
description = "Filecon zk-Proof Library"
documentation = "https://docs.rs/bellperson"
homepage = "https://github.com/nilfoundation/fil-zk"
license = "MIT/Apache-2.0"
repository = "https://github.com/nilfoundation/fil-zk"
version = "0.12.2"
readme = "README.md"
edition = "2018"

[dependencies]
crossbeam = "0.8"
bit-vec = "0.6"
blake2s_simd = "0.5"
ff = { version = "0.2.0", package = "fff" }
futures = "0.1.29"
futures-cpupool = { version = "0.1", optional = true }
groupy = "0.3.1"
rand_core = "0.5"
byteorder = "1"
log = "0.4.8"
lazy_static = "1.4.0"
rand = "0.7"
memmap = "0.7.0"
thiserror = "1.0.10"
rustc-hash = "1.1.0"
num_cpus = "1"
crossbeam-channel = "0.5.0"
rayon = "1.2.1"
rayon-core = "1.6.1"
rayon-futures = "0.1.1"
dirs = "2.0.2"
sha2 = "0.9"
config = { version = "0.10.1", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# blst feature
blstrs = { version = "0.1.0", optional = true }

# pairing feature
paired = { version = "0.21.0", optional = true }

# gpu feature 
rust-gpu-tools = { version = "0.3.0", optional = true }
ff-cl-gen = { git = "ssh://git@github.com/nilfoundation/ff-cl-gen", branch = "master", optional = true }
fs2 = { version = "0.4.3", optional = true }
fil-ocl = { version = "0.19.6", optional = true }

[dev-dependencies]
hex-literal = "0.2"
rand_xorshift = "0.2"
sha2 = "0.9"
env_logger = "0.8.1"
criterion = "0.3.0"

[features]
default = ["blst", "gpu"]
gpu = ["rust-gpu-tools", "ff-cl-gen", "fs2", "fil-ocl"]
groth16 = []

blst = ["blstrs", "groth16"]
blst-serde = ["blstrs/serde"]
pairing = ["paired", "groth16"]
pairing-serde = ["paired/serde"]

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[badges]
maintenance = { status = "actively-developed" }


[[bench]]
name = "lc"
harness = false
